force-app/main/default/objects/Claim_Line_Item__c/Claim_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Claim Line Item</label>
    <nameField>
        <displayFormat>CLI-{0000}</displayFormat>
        <label>Claim Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claim Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>