force-app/main/default/objects/Claim_Line_Item__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Claim Line Items</relationshipLabel>
    <relationshipName>Claim_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>