force-app/main/default/objects/Claim_Line_Item__c/fields/ASM_Remarks__c.field-meta.xml
<CustomField>
    <fullName>ASM_Remarks__c</fullName>
    <label>L1 Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>