force-app/main/default/objects/Claim_Line_Item__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Type</label>
    <referenceTo>Case_Type__c</referenceTo>
    <relationshipLabel>Claim Line Items</relationshipLabel>
    <relationshipName>Claim_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>