force-app/main/default/objects/Claim_Line_Item__c/fields/Contract_Backend_Margin__c.field-meta.xml
<CustomField>
    <fullName>Contract_Backend_Margin__c</fullName>
    <label>Contract Backend Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>