force-app/main/default/objects/Claim_Line_Item__c/fields/Distributor_Comment__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Comment__c</fullName>
    <label>Distributor Comment</label>
    <type>TextArea</type>
</CustomField>