force-app/main/default/objects/Claim_Line_Item__c/fields/Head_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Head_Remarks__c</fullName>
    <label>L5 Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>