force-app/main/default/objects/Claim_Line_Item__c/fields/MIS_Remarks__c.field-meta.xml
<CustomField>
    <fullName>MIS_Remarks__c</fullName>
    <label>L4 Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>