force-app/main/default/objects/Claim_Line_Item__c/fields/RSM_Remarks__c.field-meta.xml
<CustomField>
    <fullName>RSM_Remarks__c</fullName>
    <label>L2 Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>