force-app/main/default/objects/Claim_Line_Item__c/fields/Sales_Manager_Comment__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager_Comment__c</fullName>
    <label>Sales  Manager Comment</label>
    <type>TextArea</type>
</CustomField>