force-app/main/default/objects/Claim_Line_Item__c/fields/Stock_Price__c.field-meta.xml
<CustomField>
    <fullName>Stock_Price__c</fullName>
    <label>Stock Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>