force-app/main/default/objects/Claim_Line_Item__c/fields/ZSM_Remarks__c.field-meta.xml
<CustomField>
    <fullName>ZSM_Remarks__c</fullName>
    <label>L3 Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>