force-app/main/default/objects/Claim_Line_Item__c/validationRules/ASM_Remarks_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>ASM_Remarks_Required</fullName>
    <active>false</active>
    <errorConditionFormula>AND( $User.LastName ==  Claim__r.ASM__r.LastName,  ISBLANK(ASM_Remarks__c), ISCHANGED( Approved_Amount__c ) )</errorConditionFormula>
    <errorDisplayField>ASM_Remarks__c</errorDisplayField>
    <errorMessage>You must enter a value</errorMessage>
</ValidationRule>