force-app/main/default/objects/Claim_Line_Item__c/validationRules/Head_Remarks_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Head_Remarks_Required</fullName>
    <active>false</active>
    <errorConditionFormula>AND( $User.LastName ==   Claim__r.Head_User__r.LastName  ,  ISBLANK(Head_Remarks__c), ISCHANGED( Approved_Amount__c )  )</errorConditionFormula>
    <errorDisplayField>Head_Remarks__c</errorDisplayField>
    <errorMessage>You must enter a value</errorMessage>
</ValidationRule>