force-app/main/default/objects/Claim_Line_Item__c/validationRules/MIS_Remarks_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>MIS_Remarks_Required</fullName>
    <active>false</active>
    <errorConditionFormula>AND( $User.LastName ==    Claim__r.MIS_User__r.LastName ,  ISBLANK(MIS_Remarks__c), ISCHANGED( Approved_Amount__c )  )</errorConditionFormula>
    <errorDisplayField>MIS_Remarks__c</errorDisplayField>
    <errorMessage>You must enter a value</errorMessage>
</ValidationRule>