force-app/main/default/objects/Claim_Line_Item__c/validationRules/RSM_Remarks_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>RSM_Remarks_Required</fullName>
    <active>false</active>
    <errorConditionFormula>AND( $User.LastName ==   Claim__r.RSM__r.LastName ,  ISBLANK(RSM_Remarks__c), ISCHANGED( Approved_Amount__c )  )</errorConditionFormula>
    <errorDisplayField>RSM_Remarks__c</errorDisplayField>
    <errorMessage>You must enter a value</errorMessage>
</ValidationRule>