force-app/main/default/objects/Claim_Line_Item__c/validationRules/You_can_modify_Only_ASM_Remarks.validationRule-meta.xml
<ValidationRule>
    <fullName>You_can_modify_Only_ASM_Remarks</fullName>
    <active>false</active>
    <errorConditionFormula>AND( $User.LastName ==  Claim__r.ASM__r.LastName , 
  OR(
        ISCHANGED(RSM_Remarks__c),
        ISCHANGED(ZSM_Remarks__c),
        ISCHANGED(MIS_Remarks__c),
        ISCHANGED(Head_Remarks__c)
    )  )</errorConditionFormula>
    <errorDisplayField>ASM_Remarks__c</errorDisplayField>
    <errorMessage>You can modify Only L1 Remarks.</errorMessage>
</ValidationRule>