force-app/main/default/objects/Claim_Line_Item__c/validationRules/You_can_modify_Only_ZSM_Remarks.validationRule-meta.xml
<ValidationRule>
    <fullName>You_can_modify_Only_ZSM_Remarks</fullName>
    <active>false</active>
    <errorConditionFormula>AND( $User.LastName ==  Claim__r.ZSM_User__r.LastName , 
  OR(
        ISCHANGED(ASM_Remarks__c),
        ISCHANGED(RSM_Remarks__c),
        ISCHANGED(MIS_Remarks__c),
        ISCHANGED(Head_Remarks__c)
    )  )</errorConditionFormula>
    <errorDisplayField>ZSM_Remarks__c</errorDisplayField>
    <errorMessage>You can modify Only L3 Remarks.</errorMessage>
</ValidationRule>