force-app/main/default/objects/Claim_Line_Item__c/validationRules/ZSM_Remarks_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>ZSM_Remarks_Required</fullName>
    <active>false</active>
    <errorConditionFormula>AND( $User.LastName == Claim__r.ZSM_User__r.LastName ,  ISBLANK(ZSM_Remarks__c), ISCHANGED( Approved_Amount__c )  )</errorConditionFormula>
    <errorDisplayField>ZSM_Remarks__c</errorDisplayField>
    <errorMessage>You must enter a value</errorMessage>
</ValidationRule>